--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 			var pos = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
 			var marker = new google.maps.Marker({
 			position: pos,
-			icon: "player.png",
+			icon: "character.png",
 			map: zombie_map
 			});
 			old_position = marker;
